compiler/test/conformance/testdata/errors/09_generic_constraint_violation.yz
// Item has no to_string method — violates the constraint inferred for T in Wrapper.
Item: {
    name String
}

Wrapper: {
    T
    value T
    describe #(String) {
        value.to_string()
    }
}

main: {
    w: Wrapper(Item("hello"))
    print(w.describe())
}
